--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "colorterminal"
-version = "1.0.0"
+name = "terminal-colorize"
+version = "1.0.1"
 description = "A simple library for colored terminal output using ANSI escape codes"
 readme = "README.md"
 requires-python = ">=3.6"
