--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "terminal-colorize"
-version = "1.0.1"
-description = "A simple library for colored terminal output using ANSI escape codes"
+version = "2.0.0"
+description = "A comprehensive library for colored terminal output, progress bars, tables, and shapes using ANSI escape codes"
 readme = "README.md"
 requires-python = ">=3.6"
 license = {text = "MIT"}
